# Codex_testing_bench

./: .gitignore  README.md  实验报告-Codex模型人格化行为对比研究-v1.md
apps/research-console/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
artifacts/: README.md
artifacts/swebench-study-2026-03-11T11-26-08Z-bc423e7d/: campaign-manifest.json  selected-dataset.json
artifacts/swebench-study-2026-03-11T11-37-27Z-946959b3/: campaign-manifest.json  grounding-claims.json  selected-dataset.json
artifacts/swebench-study-2026-03-11T11-40-53Z-dc2ea076/: campaign-manifest.json  selected-dataset.json
artifacts/swebench-study-2026-03-11T11-47-07Z-f9e12677/: campaign-manifest.json  selected-dataset.json
artifacts/swebench-study-2026-03-11T12-02-48Z-b1982a98/: campaign-manifest.json  codex-architecture-map.json  codex-unique-claims.json  selected-dataset.json
artifacts/swebench-study-2026-03-11T12-08-23Z-35c32d69/: campaign-manifest.json  selected-dataset.json
artifacts/swebench-study-2026-03-11T12-09-38Z-a7d67f37/: campaign-manifest.json  selected-dataset.json
artifacts/swebench-study-2026-03-11T12-35-02Z-ac52427a/: campaign-manifest.json  predictions.jsonl  selected-dataset.json
artifacts/swebench-study-2026-03-11T15-22-40Z-f5a62a0f/: campaign-manifest.json  selected-dataset.json
artifacts/swebench-study-2026-03-11T15-35-40Z-4c8c79a3/: campaign-manifest.json  codex-unique-claims.json  grounding-claims.json  predictions.jsonl  selected-dataset.json
artifacts/swebench-study-2026-03-11T18-03-12Z-d18b507d/: campaign-manifest.json  selected-dataset.json
artifacts/swebench-study-2026-03-12T02-54-28Z-89318dc7/: campaign-manifest.json  selected-dataset.json
artifacts/swebench-study-2026-03-12T03-01-35Z-f7da671d/: campaign-manifest.json  selected-dataset.json
artifacts/swebench-study-2026-03-12T11-22-46Z-6a2660a3/: campaign-manifest.json  predictions.jsonl  selected-dataset.json
bench/: Cargo.toml  openai:gpt-5.4.swebench-study-2026-03-11T12-35-02Z-ac52427a.json
bench/crates/codex-bench-cli/: Cargo.toml
bench/crates/codex-bench-cli/src/: main.rs
bench/crates/codex-bench-codex/: Cargo.toml
bench/crates/codex-bench-codex/src/: architecture.rs  lib.rs  runtime.rs
bench/crates/codex-bench-control-plane/: Cargo.toml
bench/crates/codex-bench-control-plane/src/: api.rs  index.rs  lib.rs  live.rs  main.rs  processes.rs  server.rs
bench/crates/codex-bench-core/: Cargo.toml
bench/crates/codex-bench-core/src/: artifacts.rs  commands.rs  config.rs  io.rs  lib.rs  nlp.rs  python.rs  reconcile.rs  traits.rs  types.rs  workspace.rs
bench/crates/codex-bench-newtonbench/: Cargo.toml
bench/crates/codex-bench-newtonbench/src/: lib.rs
bench/crates/codex-bench-nl2repo/: Cargo.toml
bench/crates/codex-bench-nl2repo/src/: lib.rs
bench/crates/codex-bench-probes/: Cargo.toml
bench/crates/codex-bench-probes/src/: claims.rs  derive.rs  lib.rs
bench/crates/codex-bench-report/: Cargo.toml
bench/crates/codex-bench-report/src/: lib.rs
bench/crates/codex-bench-swebench/: Cargo.toml
bench/crates/codex-bench-swebench/src/: lib.rs
bench/logs/build_images/instances/sweb.eval.x86_64.django__django-16454__latest/: setup_repo.sh
bench/logs/run_evaluation/swebench-study-2026-03-11T12-35-02Z-ac52427a/openai:gpt-5.4/django__django-16938/: patch.diff  report.json  test_output.txt
docs/: README.md  extending-the-bench.md  getting-started.md  index.md  pi-dev.md  pi.md
docs/architecture/: bench-architecture.md
docs/artifacts/: artifact-contract.md
docs/automation/: hooks.md
docs/channels/: bluebubbles.md  feishu.md  group-messages.md  nostr.md
docs/cli/: index.md  onboard.md  setup.md
docs/concepts/: agent-loop.md  agent-workspace.md  agent.md  architecture.md  compaction.md  context.md  features.md  memory.md  messages.md  model-providers.md  models.md  multi-agent.md  oauth.md  session.md
docs/gateway/: authentication.md  configuration.md  multiple-gateways.md
docs/help/: debugging.md  faq.md
docs/install/: index.md  installer.md  macos-vm.md
docs/ja-JP/: index.md
docs/nodes/: images.md
docs/plans/: 2026-03-12-control-plane-upgrade-design.md  2026-03-12-control-plane-upgrade-plan.md  2026-03-12-research-console-upgrade-design.md  2026-03-12-research-console-upgrade-plan.md
docs/probes/: probe-taxonomy.md
docs/providers/: anthropic.md  index.md  models.md  openai.md
docs/reference/: AGENTS.default.md  credits.md  session-management-compaction.md  wizard.md
docs/references/: benchmarks.md  codex.md
docs/research/: codex-behavior-bench-upgrade-plan.md  codex-observability-contract.md  model-personality-study.md  research-console-upgrade-plan.md  research-console.md
docs/start/: getting-started.md  onboarding-overview.md  openclaw.md  wizard-cli-automation.md  wizard-cli-reference.md  wizard.md
docs/tools/: acp-agents.md  clawhub.md  creating-skills.md  skills.md  thinking.md
docs/web/: control-ui.md
docs/zh-CN/: index.md
repos/codex/codex-rs/codex-swebench-study/: Cargo.toml
repos/codex/codex-rs/codex-swebench-study/src/: architecture.rs  claims.rs  main.rs  report.rs  study.rs  types.rs
research_codex_openclaw/: research_plan.md  research_report.md
src/agents/: codex-engine.app-server.test.ts  codex-engine.notifications.test.ts  codex-engine.ts  codex-rpc-client.ts  defaults.ts
src/commands/: agent.test.ts  agent.ts  codex-managed.test.ts  codex-managed.ts  setup-state.ts  setup.one-click.test.ts  setup.ts
src/config/: types.agent-defaults.ts  types.agents.ts  zod-schema.agent-defaults.ts  zod-schema.agent-runtime.ts
src/gateway/: codex-thread-history.test.ts  codex-thread-history.ts  method-scopes.ts  operator-request-manager.ts  operator-request-runtime.ts  server-broadcast.ts  server-methods-list.ts  server.impl.ts  server.sessions.gateway-server-sessions-a.test.ts
src/sessions/: model-overrides.test.ts  model-overrides.ts
src/test-fixtures/: fake-codex-app-server.mjs
studies/benchmarks/: 2026-benchmark-catalog.json
studies/claims/: codex-unique-claims.json  grounding-claims.json
(+374 files in other folders)
