[workspace]
members = [
    "crates/codex-bench-cli",
    "crates/codex-bench-core",
    "crates/codex-bench-codex",
    "crates/codex-bench-probes",
    "crates/codex-bench-report",
    "crates/codex-bench-swebench",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1.89"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
toml = "0.9"

codex-bench-core = { path = "crates/codex-bench-core" }
codex-bench-codex = { path = "crates/codex-bench-codex" }
codex-bench-probes = { path = "crates/codex-bench-probes" }
codex-bench-report = { path = "crates/codex-bench-report" }
codex-bench-swebench = { path = "crates/codex-bench-swebench" }

codex-app-server-client = { path = "../repos/codex/codex-rs/app-server-client" }
codex-app-server-protocol = { path = "../repos/codex/codex-rs/app-server-protocol" }
codex-arg0 = { path = "../repos/codex/codex-rs/arg0" }
codex-cloud-requirements = { path = "../repos/codex/codex-rs/cloud-requirements" }
codex-core = { path = "../repos/codex/codex-rs/core" }
codex-feedback = { path = "../repos/codex/codex-rs/feedback" }
codex-protocol = { path = "../repos/codex/codex-rs/protocol" }

