[workspace]
members = [
    "crates/codex-bench-cli",
    "crates/codex-bench-core",
    "crates/codex-bench-codex",
    "crates/codex-bench-newtonbench",
    "crates/codex-bench-nl2repo",
    "crates/codex-bench-probes",
    "crates/codex-bench-report",
    "crates/codex-bench-swebench",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1.89"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
once_cell = "1.21"
regex = "1.12"
rust-stemmers = "1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
toml = "0.9"
unicode-segmentation = "1.12"

codex-bench-core = { path = "crates/codex-bench-core" }
codex-bench-codex = { path = "crates/codex-bench-codex" }
codex-bench-newtonbench = { path = "crates/codex-bench-newtonbench" }
codex-bench-nl2repo = { path = "crates/codex-bench-nl2repo" }
codex-bench-probes = { path = "crates/codex-bench-probes" }
codex-bench-report = { path = "crates/codex-bench-report" }
codex-bench-swebench = { path = "crates/codex-bench-swebench" }

codex-app-server-client = { path = "../repos/codex/codex-rs/app-server-client" }
codex-app-server-protocol = { path = "../repos/codex/codex-rs/app-server-protocol" }
codex-arg0 = { path = "../repos/codex/codex-rs/arg0" }
codex-cloud-requirements = { path = "../repos/codex/codex-rs/cloud-requirements" }
codex-core = { path = "../repos/codex/codex-rs/core" }
codex-feedback = { path = "../repos/codex/codex-rs/feedback" }
codex-protocol = { path = "../repos/codex/codex-rs/protocol" }

[patch.crates-io]
crossterm = { git = "https://github.com/nornagon/crossterm", branch = "nornagon/color-query" }
ratatui = { git = "https://github.com/nornagon/ratatui", branch = "nornagon-v0.29.0-patch" }
tokio-tungstenite = { git = "https://github.com/openai-oss-forks/tokio-tungstenite", rev = "132f5b39c862e3a970f731d709608b3e6276d5f6" }
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "9200079d3b54a1ff51072e24d81fd354f085156f" }

[patch."ssh://git@github.com/openai-oss-forks/tungstenite-rs.git"]
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "9200079d3b54a1ff51072e24d81fd354f085156f" }
