[package]
name = "codex-bench-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true

codex-bench-codex.workspace = true
codex-bench-core.workspace = true
codex-bench-newtonbench.workspace = true
codex-bench-nl2repo.workspace = true
codex-bench-report.workspace = true
codex-bench-swebench.workspace = true
