[package]
name = "codex-bench-codex"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true

codex-bench-core.workspace = true
codex-app-server-client.workspace = true
codex-app-server-protocol.workspace = true
codex-arg0.workspace = true
codex-cloud-requirements.workspace = true
codex-core.workspace = true
codex-feedback.workspace = true
codex-protocol.workspace = true

