[package]
name = "codex-bench-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
once_cell.workspace = true
regex.workspace = true
rust-stemmers.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
unicode-segmentation.workspace = true
