[package]
name = "codex-bench-nl2repo"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true

codex-bench-core.workspace = true
codex-bench-codex.workspace = true
codex-bench-probes.workspace = true
codex-bench-report.workspace = true
