[package]
name = "codex-bench-report"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde_json.workspace = true

codex-app-server-protocol.workspace = true
codex-bench-codex.workspace = true
codex-bench-core.workspace = true
codex-bench-probes.workspace = true
codex-protocol.workspace = true
